// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConferenceDates renders only of the dates if opening and closing are same 1`] = `
<div>
  2 May 2019
</div>
`;

exports[`ConferenceDates renders only opening date  1`] = `
<div>
  12 May 2019
</div>
`;

exports[`ConferenceDates renders only opening date with missing day 1`] = `
<div>
  May 2019
</div>
`;

exports[`ConferenceDates renders when opening and closing has only (same) year 1`] = `
<div>
  2019
</div>
`;

exports[`ConferenceDates renders when opening and closing in different months of the same year 1`] = `
<div>
  29 April-5 May 2019
</div>
`;

exports[`ConferenceDates renders when opening and closing in different months of the same year and day is missing 1`] = `
<div>
  April-July 2019
</div>
`;

exports[`ConferenceDates renders when opening and closing is completely different 1`] = `
<div>
  30 December 2019-5 January 2020
</div>
`;

exports[`ConferenceDates renders when opening and closing on different dates of the same month 1`] = `
<div>
  2-5 May 2019
</div>
`;
